// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Body1 Given no text Should render 1`] = `
<span
  className="sc-bczRLJ dqVkrV"
/>
`;

exports[`Body1 Given text Should render 1`] = `
<span
  className="sc-bczRLJ dqVkrV"
>
  some text
</span>
`;
